# rules_pex

./: .bazelrc  .gitignore  .isort.cfg  .mypy.ini  .pylintrc.toml  404.html  MODULE.bazel  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  version.bzl
.github/: release_notes.template
.github/workflows/: ci.yaml  compile-requirements.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md
examples/: examples_test.py
examples/aspect_rules_py/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
examples/rules_python/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel
examples/rules_venv/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  flask_hello_world.py
pex/: BUILD.bazel  defs.bzl  extensions.bzl  py_pex_binary.bzl  py_pex_toolchain.bzl  py_scie_binary.bzl
pex/private/: BUILD.bazel  pex.bzl  pex_process_wrapper.py  pex_toolchain.bzl  pex_tools_repo.bzl  pex_versions.bzl  python_versions.bzl  scie_cache_generator.py  scie_jump_versions.bzl  scie_ptex_versions.bzl  scie_science_versions.bzl  update_pex_versions.py  update_python_versions.py
tests/basic/: BUILD.bazel
tests/data/: BUILD.bazel  data.py
tests/data_generated/: BUILD.bazel  data.py
tools/version_test/: BUILD.bazel  version_test.py
