load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("//pex:py_pex_binary.bzl", "py_pex_binary")
load("//pex:py_scie_binary.bzl", "py_scie_binary")

py_binary(
    name = "data",
    srcs = ["data.py"],
    data = ["data_file.txt"],
    deps = ["@rules_python//python/runfiles"],
)

py_scie_binary(
    name = "data_scie",
    binary = ":data",
)

py_pex_binary(
    name = "data_pex",
    binary = ":data",
)

run_binary(
    name = "data_scie_output",
    outs = ["data_scie_output.txt"],
    args = ["--output=$(execpath :data_scie_output.txt)"],
    tool = ":data_scie",
)

run_binary(
    name = "data_pex_output",
    outs = ["data_pex_output.txt"],
    args = ["--output=$(execpath :data_pex_output.txt)"],
    tool = ":data_pex",
)

write_file(
    name = "data_expected",
    out = "data_expected.txt",
    content = [
        "La-Li-Lu-Le-Lo",
        "",
    ],
    newline = "unix",
)

diff_test(
    name = "data_scie_diff_test",
    file1 = ":data_expected.txt",
    file2 = ":data_scie_output.txt",
)

diff_test(
    name = "data_pex_diff_test",
    file1 = ":data_expected.txt",
    file2 = ":data_pex_output.txt",
)
